fix left side squishing on mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -525,6 +525,11 @@ section {
 }
 
 @media (max-width: 667px) {
+  
+  .about {
+    padding-left: 5px;
+  }
+  
   .about .image img {
     max-width: 100%;
   }
